--- a/widget/index.html
+++ b/widget/index.html
@@ -21,14 +21,14 @@
 
 <div class="content" ng-controller="WidgetHomeCtrl as WidgetHome">
   <div style="text-align: center;vertical-align: middle; height: 100%"
-       ng-if="WidgetHome.data.content && WidgetHome.data.content.custom && WidgetHome.isWebPlatform">
+       ng-if="WidgetHome.data.content && WidgetHome.data.content.link && WidgetHome.isWebPlatform">
     <h3 style="margin-top: 50%; opacity: .25;"></h3>
 
     <div>
       <h2>Success!</h2>
 
       <p>Your calendar has been linked and will show in your app. To view your
-        calendar now click <a href="{{WidgetHome.data.content.custom}}" target="_blank">here</a></p>
+        calendar now click <a href="{{WidgetHome.data.content.link}}" target="_blank">here</a></p>
     </div>
   </div>
 </div>
@@ -36,8 +36,8 @@
 <!--<div class="content"
      style="-webkit-overflow-scrolling: touch !important;overflow: auto; height: 100%;"
      ng-controller="WidgetHomeCtrl as WidgetHome">
-  <iframe src="{{WidgetHome.data.content.custom | returnUrl}}"
-          ng-if="WidgetHome.data.content.custom"
+  <iframe src="{{WidgetHome.data.content.link | returnUrl}}"
+          ng-if="WidgetHome.data.content.link"
           style="height: 100%;position: relative"></iframe>
 </div>-->
 </body>
